# pysnake

./: .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pyproject.toml  ruff.toml
.github/workflows/: branch-check.yml  linting.yml
pysnake/: main.py  main_menu.py  scenes.py
